# rules_protobuf

./: .bazelrc  .gitignore  .travis.yml  BUILD  CHANGES.md  DEPENDENCIES.md  Makefile  README.md  WORKSPACE
android/: BUILD  rules.bzl
bzl/: README.md  classes.bzl  com_github_golang_glog.BUILD  com_github_golang_protobuf.BUILD  compile.bzl  cpp.bzl  dependencies.bzl  deps.bzl  go.bzl  invoke.bzl  java.bzl  languages.bzl  protobuf.bzl  protoc.bzl  repositories.bzl  require.bzl  rules.bzl  util.bzl
closure/: BUILD  README.md  rules.bzl
cpp/: BUILD  README.md  deps.bzl  generate_cc.bzl  generate_cc.modified.bzl  (+3 more)
rust/raze/: BUILD  Cargo.toml  crates.bzl  regenerate_crates.sh
rust/raze/remote/: arrayvec-0.4.7.BUILD  base64-0.9.2.BUILD  bitflags-1.0.3.BUILD  byteorder-1.2.3.BUILD  bytes-0.4.8.BUILD  cfg-if-0.1.3.BUILD  crossbeam-deque-0.3.1.BUILD  crossbeam-epoch-0.4.1.BUILD  crossbeam-utils-0.3.2.BUILD  fuchsia-zircon-0.3.3.BUILD  fuchsia-zircon-sys-0.3.3.BUILD  futures-0.1.21.BUILD  futures-cpupool-0.1.8.BUILD  grpc-0.4.0.BUILD  grpc-compiler-0.4.0.BUILD  httpbis-0.6.1.BUILD  iovec-0.1.2.BUILD  kernel32-sys-0.2.2.BUILD  lazy_static-1.0.1.BUILD  lazycell-0.6.0.BUILD  libc-0.2.42.BUILD  log-0.3.9.BUILD  log-0.4.1.BUILD  log-0.4.2.BUILD  memoffset-0.2.1.BUILD  mio-0.6.14.BUILD  mio-uds-0.6.6.BUILD  miow-0.2.1.BUILD  net2-0.2.32.BUILD  nodrop-0.1.12.BUILD  num_cpus-1.8.0.BUILD  protobuf-1.6.0.BUILD  protobuf-codegen-1.6.0.BUILD  rand-0.4.2.BUILD  safemem-0.2.0.BUILD  scoped-tls-0.1.2.BUILD  scopeguard-0.3.3.BUILD  slab-0.3.0.BUILD  slab-0.4.0.BUILD  tls-api-0.1.19.BUILD  (+25 more)
(+348 files in other folders)
